[tool.poetry]
name = "amex-card-member-amount"
version = "0.1.0"
description = ""
authors = ["Josh Vocal <joshvocal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
ruff = "^0.1.9"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
